--- a/base.cfg
+++ b/base.cfg
@@ -1,10 +1,9 @@
 [buildout]
 extensions = buildout.bootstrap
 parts = 
-    pyramid
-    wsgi
+    application
     static
-appname = myapp
+appname = 
 develop = ${buildout:appname}
 newest = false
 
@@ -12,20 +11,23 @@ newest = false
 recipe = zc.recipe.egg
 eggs = 
     pyramid
-    ${buildout:appname}
 
-[wsgi]
+[application]
 recipe = zc.recipe.egg
 initialization =
+    if __name__ == '__main__': sys.exit(1)
     config = '${buildout:directory}/${buildout:appname}/production.ini'
     import logging.config
     logging.config.fileConfig(config)
     from pyramid.paster import get_app
     application = get_app(config, 'main') 
+
 eggs = 
+    pyramid
     ${buildout:appname}
-entry-points = wsgi=pyramid.scripts.pserve:main
-arguments = ['', '${buildout:directory}/${buildout:appname}/development.ini' ]
+
+# dummy entry point
+entry-points = application=${buildout:appname}:main
 
 [static]
 recipe=collective.recipe.symlink
