generate wsgi script separately

--- a/base.cfg
+++ b/base.cfg
@@ -3,6 +3,7 @@ extensions = buildout.bootstrap
 parts = 
     application
     static
+    wsgi
 appname = 
 develop = ${buildout:appname}
 newest = false
@@ -14,20 +15,24 @@ eggs =
 
 [application]
 recipe = zc.recipe.egg
+eggs = 
+    pyramid
+    ${buildout:appname}
+
+[wsgi]
+# this generate the wsgi needed for openshift modwsgi
+recipe = zc.recipe.egg
 initialization =
     if __name__ == '__main__': sys.exit(1)
     config = '${buildout:directory}/${buildout:appname}/production.ini'
     import logging.config
     logging.config.fileConfig(config)
     from pyramid.paster import get_app
-    application = get_app(config, 'main') 
+    wsgi = get_app(config, 'main') 
 
-eggs = 
-    pyramid
-    ${buildout:appname}
-
+eggs = ${buildout:appname}
 # dummy entry point
-entry-points = application=${buildout:appname}:main
+entry-points = wsgi=${buildout:appname}:main
 
 [static]
 recipe=collective.recipe.symlink
