fix broken generated wsgi script

--- a/deployment.cfg
+++ b/deployment.cfg
@@ -14,7 +14,7 @@ initialization =
     import logging.config
     logging.config.fileConfig(config)
     from pyramid.paster import get_app
-    wsgi = get_app(config, 'main') 
+    application = get_app(config, 'main') 
 
 eggs = ${buildout:appname}
 # dummy entry point
