--- a/deployment.cfg
+++ b/deployment.cfg
@@ -1,6 +1,14 @@
 [buildout]
 extends = buildout.cfg
-parts += wsgi
+parts +=
+    env
+    static 
+    wsgi
+    production_ini
+    relstorage
+
+[env]
+recipe = gocept.recipe.env
 
 [wsgi]
 # this generate the wsgi needed for openshift modwsgi
@@ -8,7 +16,7 @@ recipe = zc.recipe.egg
 initialization =
     if __name__ == '__main__': sys.exit(1)
     import shutil
-    origConfig = '${buildout:directory}/${buildout:appname}/production.ini'
+    origConfig = '${production_ini:output}'
     config = '${buildout:data-directory}/production.ini'
     shutil.copy2(origConfig, config)
     import logging.config
@@ -20,3 +28,20 @@ eggs = ${buildout:appname}
 # dummy entry point
 entry-points = wsgi=${buildout:appname}:main
 
+[static]
+recipe=collective.recipe.symlink
+egg = ${buildout:appname}
+destination = ${buildout:directory}/wsgi/
+links = 
+    static = ${buildout:appname}/static
+
+
+[production_ini]
+recipe=collective.recipe.template
+input = etc/production.ini.in
+output = ${buildout:parts-directory}/etc/production.ini
+
+[relstorage]
+recipe=collective.recipe.template
+input = etc/relstorage.conf.in
+output = ${buildout:parts-directory}/etc/relstorage.conf
