--- a/deployment.cfg
+++ b/deployment.cfg
@@ -45,3 +45,4 @@ output = ${buildout:parts-directory}/etc/production.ini
 recipe=collective.recipe.template
 input = etc/relstorage.conf.in
 output = ${buildout:parts-directory}/etc/relstorage.conf
+dbname = zodb
