--- a/etc/production.ini.in
+++ b/etc/production.ini.in
@@ -11,7 +11,7 @@ pyramid.includes =
     pyramid_zodbconn
 
 tm.attempts = 3
-zodbconn.uri = ${relstorage:output}
+zodbconn.uri = zconfig://${relstorage:output}
 
 [server:main]
 use = egg:waitress#main
