added fanstatic and generate development.ini using buildout

--- a/base.cfg
+++ b/base.cfg
@@ -2,6 +2,7 @@
 extensions = buildout.bootstrap
 parts = 
     application
+    development_ini
 appname = 
 develop = ${buildout:appname}
 newest = false
@@ -16,3 +17,8 @@ recipe = zc.recipe.egg
 eggs = 
     pyramid
     ${buildout:appname}
+
+[development_ini]
+recipe=collective.recipe.template
+input = etc/development.ini.in
+output = ${buildout:parts-directory}/etc/development.ini
