--- a/etc/development.ini.in
+++ b/etc/development.ini.in
@@ -1,17 +1,20 @@
 [app:main]
 use = egg:giza
 
-pyramid.reload_templates = false
+pyramid.reload_templates = true
 pyramid.debug_authorization = false
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 pyramid.includes =
-    pyramid_tm
+    pyramid_debugtoolbar
     pyramid_zodbconn
+    pyramid_tm
 
 tm.attempts = 3
-zodbconn.uri = file://%(here)s/Data.fs?connection_cache_size=20000
+zodbconn.uri = file://${buildout:directory}/var/Data.fs?connection_cache_size=20000
+fanstatic.bottom = true
+fanstatic.debug = true
 
 [server:main]
 use = egg:waitress#main
@@ -30,11 +33,11 @@ keys = console
 keys = generic
 
 [logger_root]
-level = WARN
+level = INFO
 handlers = console
 
 [logger_giza]
-level = WARN
+level = DEBUG
 handlers =
 qualname = giza
 
